@@ -646,7 +646,7 @@ char get_file_type_string(mode_t mode) {
 
 void print_added_line(db_line* data) {
     if(conf->summarize_changes==1) {
-        error(2,"%c+++++++++++++++: %s\n",get_file_type_string(data->perm_o) , data->filename);
+        error(2,"%c+++++++++++++++: %s\n",get_file_type_string(data->perm) , data->filename);
     } else {
         error(2,"added: %s\n",data->filename);
     }
@@ -654,7 +654,7 @@ void print_added_line(db_line* data) {
 
 void print_removed_line(db_line* data) {
     if(conf->summarize_changes==1) {
-        error(2,"%c---------------: %s\n",'-', data->filename);
+        error(2,"%c---------------: %s\n",get_file_type_string(data->perm), data->filename);
     } else {
         error(2,"removed: %s\n",data->filename);
     }
@@ -736,7 +736,7 @@ void print_changed_line(db_line* old,db_line* new, DB_ATTR_TYPE ignorelist) {
 
     if(conf->summarize_changes==1) {
         char summary[]="                ";
-        summary[0]=get_file_type_string(new->perm_o);
+        summary[0]=get_file_type_string(new->perm);
         easy_compare_char(DB_LINKNAME,str_has_changed(old->linkname,new->linkname),'l',1);
         summary[2]=get_size_char(ignorelist, old, new);
         easy_char(DB_BCOUNT,bcount,'b',3);
