@@ -626,11 +626,7 @@ list* add_file_to_list(list* listp,char*filename,DB_ATTR_TYPE attr,int* addok)
     fil->gid=0;
   }
 
-  if(DB_PERM&fil->attr){
-    fil->perm=fs.st_mode;
-  }else{
-    fil->perm=0;
-  }
+  fil->perm=fs.st_mode;
 
   if(DB_SIZE&fil->attr||DB_SIZEG&fil->attr){
     fil->size=fs.st_size;
@@ -1009,9 +1005,7 @@ void strip_dbline(db_line* line,DB_ATTR_TYPE attr)
   if(!(attr&DB_LINKNAME)){
     checked_free(line->linkname);
   }
-  if(!(attr&DB_PERM)){
-    line->perm=0;
-  }
+  /* permissions are always needed for summarize_changes, hence it is never stripped */
   if(!(attr&DB_UID)){
     line->uid=0;
   }
